pkl-core/src/test/files/LanguageSnippetTests/input/errors/undefinedProperty3.pkl
class D {
  dProperty: String
}

class A {
  b: Mapping<D, B>
}

class B {
  `bar-baz`: C
}

class C {
  theNumber : Int
}

a: A = new {
  b {
    [new D { dProperty = "dProperty" }] = new {}
  }
}
